--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -36,87 +36,6 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="lbl_fonts">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>201</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Font:</string>
-    </property>
-   </widget>
-   <widget class="QFontComboBox" name="cb_fonts">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>30</y>
-      <width>151</width>
-      <height>23</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="sb_size">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>90</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>3000</number>
-    </property>
-    <property name="value">
-     <number>200</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_font_size">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>70</y>
-      <width>81</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Font size:</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="le_text">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>60</y>
-      <width>121</width>
-      <height>23</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_text">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>40</y>
-      <width>59</width>
-      <height>15</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Text:</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btn_process">
     <property name="geometry">
      <rect>
@@ -127,45 +46,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QDoubleSpinBox" name="dsb_y">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>70</y>
-      <width>66</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="decimals">
-     <number>3</number>
-    </property>
-    <property name="maximum">
-     <double>1.000000000000000</double>
-    </property>
-    <property name="singleStep">
-     <double>0.001000000000000</double>
-    </property>
-   </widget>
-   <widget class="QDoubleSpinBox" name="dsb_x">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>40</y>
-      <width>66</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="decimals">
-     <number>3</number>
-    </property>
-    <property name="maximum">
-     <double>1.000000000000000</double>
-    </property>
-    <property name="singleStep">
-     <double>0.001000000000000</double>
+     <string>Process</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_x">
@@ -194,77 +75,144 @@
      <string>Y:</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="chk_bold">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>70</y>
-      <width>61</width>
-      <height>21</height>
+      <x>20</x>
+      <y>10</y>
+      <width>255</width>
+      <height>103</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Bold</string>
-    </property>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0" colspan="2">
+      <widget class="QLabel" name="lbl_fonts">
+       <property name="text">
+        <string>Font:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QFontComboBox" name="cb_fonts"/>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="lbl_font_size">
+       <property name="text">
+        <string>Font size:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QCheckBox" name="chk_bold">
+       <property name="text">
+        <string>Bold</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QSpinBox" name="sb_size">
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>3000</number>
+       </property>
+       <property name="value">
+        <number>200</number>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QCheckBox" name="chk_italic">
+       <property name="text">
+        <string>Italic</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
-   <widget class="QCheckBox" name="chk_italic">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>100</y>
-      <width>61</width>
-      <height>21</height>
+      <x>280</x>
+      <y>15</y>
+      <width>199</width>
+      <height>91</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Italic</string>
-    </property>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0" rowspan="2">
+      <widget class="QDoubleSpinBox" name="dsb_x">
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.001000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="lbl_text">
+       <property name="text">
+        <string>Text:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" rowspan="2">
+      <widget class="QLineEdit" name="le_text"/>
+     </item>
+     <item row="2" column="0">
+      <widget class="QDoubleSpinBox" name="dsb_y">
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.001000000000000</double>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
-   <widget class="QPushButton" name="btn_background">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>40</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Base</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="le_base">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>40</y>
-      <width>121</width>
-      <height>23</height>
+      <y>13</y>
+      <width>213</width>
+      <height>91</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QLineEdit" name="le_output">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>80</y>
-      <width>121</width>
-      <height>23</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_output">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>80</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Out</string>
-    </property>
+    <layout class="QGridLayout" name="gridLayout_3">
+     <item row="0" column="0">
+      <widget class="QLineEdit" name="le_base"/>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="btn_background">
+       <property name="text">
+        <string>Base</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLineEdit" name="le_output"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="btn_output">
+       <property name="text">
+        <string>Out</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
