--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -39,7 +39,7 @@
    <widget class="QPushButton" name="btn_process">
     <property name="geometry">
      <rect>
-      <x>720</x>
+      <x>750</x>
       <y>10</y>
       <width>91</width>
       <height>121</height>
@@ -49,39 +49,13 @@
      <string>Process</string>
     </property>
    </widget>
-   <widget class="QLabel" name="lbl_x">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>40</y>
-      <width>31</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>X:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_y">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>70</y>
-      <width>31</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Y:</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>10</y>
       <width>255</width>
-      <height>103</height>
+      <height>124</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -102,10 +76,10 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QCheckBox" name="chk_bold">
+     <item row="3" column="1">
+      <widget class="QCheckBox" name="chk_italic">
        <property name="text">
-        <string>Bold</string>
+        <string>Italic</string>
        </property>
       </widget>
      </item>
@@ -125,67 +99,19 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QCheckBox" name="chk_italic">
+     <item row="2" column="1">
+      <widget class="QCheckBox" name="chk_bold">
        <property name="text">
-        <string>Italic</string>
+        <string>Bold</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>15</y>
-      <width>199</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="0" rowspan="2">
-      <widget class="QDoubleSpinBox" name="dsb_x">
-       <property name="decimals">
-        <number>3</number>
-       </property>
-       <property name="maximum">
-        <double>1.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>0.001000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="lbl_text">
-       <property name="text">
-        <string>Text:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1" rowspan="2">
-      <widget class="QLineEdit" name="le_text"/>
-     </item>
-     <item row="2" column="0">
-      <widget class="QDoubleSpinBox" name="dsb_y">
-       <property name="decimals">
-        <number>3</number>
-       </property>
-       <property name="maximum">
-        <double>1.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>0.001000000000000</double>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
+      <x>530</x>
       <y>13</y>
       <width>213</width>
       <height>91</height>
@@ -214,6 +140,68 @@
      </item>
     </layout>
    </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>30</y>
+      <width>218</width>
+      <height>56</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="lbl_x">
+       <property name="text">
+        <string>X:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QDoubleSpinBox" name="dsb_x">
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.001000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLabel" name="lbl_text">
+       <property name="text">
+        <string>Text:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="lbl_y">
+       <property name="text">
+        <string>Y:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QDoubleSpinBox" name="dsb_y">
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="maximum">
+        <double>1.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.001000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLineEdit" name="le_text"/>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -239,9 +227,15 @@
  <tabstops>
   <tabstop>cb_fonts</tabstop>
   <tabstop>sb_size</tabstop>
+  <tabstop>chk_bold</tabstop>
+  <tabstop>chk_italic</tabstop>
   <tabstop>dsb_x</tabstop>
   <tabstop>dsb_y</tabstop>
   <tabstop>le_text</tabstop>
+  <tabstop>le_base</tabstop>
+  <tabstop>btn_background</tabstop>
+  <tabstop>le_output</tabstop>
+  <tabstop>btn_output</tabstop>
   <tabstop>btn_process</tabstop>
  </tabstops>
  <resources/>
