--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -55,19 +55,19 @@
       <x>20</x>
       <y>10</y>
       <width>255</width>
-      <height>124</height>
+      <height>133</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0" colspan="2">
-      <widget class="QLabel" name="lbl_fonts">
-       <property name="text">
-        <string>Font:</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0" colspan="2">
       <widget class="QFontComboBox" name="cb_fonts"/>
+     </item>
+     <item row="2" column="1">
+      <widget class="QCheckBox" name="chk_bold">
+       <property name="text">
+        <string>Bold</string>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="lbl_font_size">
@@ -76,33 +76,30 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QCheckBox" name="chk_italic">
+     <item row="0" column="0" colspan="2">
+      <widget class="QLabel" name="lbl_fonts">
        <property name="text">
-        <string>Italic</string>
+        <string>Font:</string>
        </property>
       </widget>
      </item>
      <item row="3" column="0">
-      <widget class="QSpinBox" name="sb_size">
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="minimum">
-        <number>1</number>
+      <widget class="QDoubleSpinBox" name="dsb_font_size">
+       <property name="decimals">
+        <number>3</number>
        </property>
        <property name="maximum">
-        <number>3000</number>
+        <double>1.000000000000000</double>
        </property>
-       <property name="value">
-        <number>200</number>
+       <property name="singleStep">
+        <double>0.001000000000000</double>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QCheckBox" name="chk_bold">
+     <item row="3" column="1">
+      <widget class="QCheckBox" name="chk_italic">
        <property name="text">
-        <string>Bold</string>
+        <string>Italic</string>
        </property>
       </widget>
      </item>
@@ -226,7 +223,7 @@
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
   <tabstop>cb_fonts</tabstop>
-  <tabstop>sb_size</tabstop>
+  <tabstop>dsb_font_size</tabstop>
   <tabstop>chk_bold</tabstop>
   <tabstop>chk_italic</tabstop>
   <tabstop>dsb_x</tabstop>
