--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -39,10 +39,10 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>22</x>
-      <y>12</y>
+      <x>23</x>
+      <y>13</y>
       <width>731</width>
-      <height>147</height>
+      <height>149</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_6">
@@ -158,7 +158,7 @@
       </layout>
      </item>
      <item row="0" column="2">
-      <layout class="QGridLayout" name="gridLayout_4">
+      <layout class="QGridLayout" name="gridLayout_5">
        <item row="0" column="0">
         <widget class="QLineEdit" name="le_base"/>
        </item>
@@ -206,18 +206,31 @@
       </layout>
      </item>
      <item row="1" column="2">
-      <layout class="QGridLayout" name="gridLayout_5">
-       <item row="2" column="0">
-        <widget class="QProgressBar" name="pb_progress">
-         <property name="value">
-          <number>0</number>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
+      <layout class="QGridLayout" name="gridLayout_4">
+       <item row="0" column="0">
+        <widget class="QLabel" name="lbl_first">
+         <property name="text">
+          <string>First:</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
+       <item row="0" column="1">
+        <widget class="QSpinBox" name="sb_first">
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="minimum">
+          <number>0</number>
+         </property>
+         <property name="maximum">
+          <number>9999999</number>
+         </property>
+         <property name="value">
+          <number>0</number>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
         <widget class="QPushButton" name="btn_process">
          <property name="text">
           <string>Process</string>
@@ -225,12 +238,45 @@
         </widget>
        </item>
        <item row="1" column="0">
+        <widget class="QLabel" name="lbl_last">
+         <property name="text">
+          <string>Last:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QSpinBox" name="sb_last">
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="minimum">
+          <number>0</number>
+         </property>
+         <property name="maximum">
+          <number>9999999</number>
+         </property>
+         <property name="value">
+          <number>99</number>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
         <widget class="QPushButton" name="btn_cancel">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="text">
           <string>Cancel</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="3">
+        <widget class="QProgressBar" name="pb_progress">
+         <property name="value">
+          <number>0</number>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -265,7 +311,10 @@
   <tabstop>btn_background</tabstop>
   <tabstop>le_output</tabstop>
   <tabstop>btn_output</tabstop>
+  <tabstop>sb_first</tabstop>
+  <tabstop>sb_last</tabstop>
   <tabstop>btn_process</tabstop>
+  <tabstop>btn_cancel</tabstop>
  </tabstops>
  <resources/>
  <connections/>
